--- a/theme.scss
+++ b/theme.scss
@@ -14,7 +14,8 @@ $black:    #000 !default;
 $blue:     #0E79B2 !default;
 
 /* Colour of navigation bar */
-$primary: #fff3a2!default;
+/*$primary: #dc322f!default;*/
+$primary: #5c6f89!default;
 
 $font-family-base: 'Source Sans Pro', 'Lato', 'Merriweather' !default; /* You put multiple down in case a computer doesn't have a particular font */
 $body-color:                $gray-700 !default;
